--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'//图片管理
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile 'com.yinglan.alphatabs:library:1.0.5'//底部状态栏
+    compile 'com.lzy.net:okgo:2.1.4'
+    compile 'com.lzy.net:okrx:0.1.2'
+    compile 'com.lzy.net:okserver:1.1.3'
 }
