--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.LoginActivity" />
-        <activity android:name=".ui.main.HomeActivity">
+        <activity android:name=".ui.user.ChangePwdActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.user.ChangePwdActivity" />
+
         <activity android:name=".ui.xz.BJCarActivity"></activity>
         <activity android:name=".ui.xz.CCsscActivity"></activity>
         <activity android:name=".ui.xz.LHCActivity"></activity>
