--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.LoginActivity" />
-        <activity android:name=".ui.user.ChangePwdActivity">
+        <activity android:name=".ui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.xz.BJCarActivity"></activity>
-        <activity android:name=".ui.xz.CCsscActivity"></activity>
-        <activity android:name=".ui.xz.LHCActivity"></activity>
+        <activity android:name=".ui.main.HomeActivity" />
+        <activity android:name=".ui.user.ChangePwdActivity" />
+        <activity android:name=".ui.xz.BJCarActivity" />
+        <activity android:name=".ui.xz.CCsscActivity" />
+        <activity android:name=".ui.xz.LHCActivity" />
+        <activity android:name=".ui.main.UserActivity" />
+        <activity android:name=".ui.main.CapitalActivity" />
+        <activity android:name=".ui.main.GameActivity"></activity>
     </application>
 
 </manifest>
