--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.LoginActivity">
+
+        </activity>
+        <activity android:name=".ui.main.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".ui.main.HomeActivity">
-
         </activity>
         <activity android:name=".ui.user.ChangePwdActivity" />
         <activity android:name=".ui.xz.BJCarActivity" />
@@ -27,6 +27,11 @@
         <activity android:name=".ui.main.UserActivity" />
         <activity android:name=".ui.main.CapitalActivity" />
         <activity android:name=".ui.main.GameActivity"></activity>
+        <activity android:name=".ui.user.AddBankActivity" />
+        <activity android:name=".ui.user.QuPwdActivity" />
+        <activity android:name=".ui.user.UserDataActivity" />
+        <activity android:name=".ui.user.MessageActivity" />
+        <activity android:name=".ui.user.LoginPwdActivity" />
     </application>
 
 </manifest>
