--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,7 @@
 
         </activity>
         <activity android:name=".ui.main.HomeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".ui.user.ChangePwdActivity" />
         <activity android:name=".ui.xz.BJCarActivity" />
@@ -32,6 +28,13 @@
         <activity android:name=".ui.user.UserDataActivity" />
         <activity android:name=".ui.user.MessageActivity" />
         <activity android:name=".ui.user.LoginPwdActivity" />
+        <activity android:name=".ui.xz.PCDDActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
