登录首页固定数据对接

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,7 @@ dependencies {
     compile 'com.github.zyyoona7:EasyPopup:1.0.0'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
     compile 'com.tencent.bugly:crashreport:latest.release'
+    compile 'pub.devrel:easypermissions:0.2.0'
+
 
 }
