--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,18 @@ dependencies {
     kapt "com.android.databinding:compiler:$kpt_version"
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile project(':afinal')
     compile project(':mvvm2')
-    compile 'com.jaeger.statusbaruitl:library:1.0.0'//设置状态栏
-    compile 'com.youth.banner:banner:1.4.9'//banner
-    compile 'com.github.bumptech.glide:glide:3.6.1'//图片管理
+    //设置状态栏
+    //banner
+    //图片管理
+    //底部状态栏
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.jaeger.statusbaruitl:library:1.0.0'
+    compile 'com.youth.banner:banner:1.4.9'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-    compile 'com.yinglan.alphatabs:library:1.0.5'//底部状态栏
+    compile 'com.yinglan.alphatabs:library:1.0.5'
     compile 'com.lzy.net:okgo:2.1.4'
     compile 'com.lzy.net:okrx:0.1.2'
     compile 'com.lzy.net:okserver:1.1.3'
